--- a/scss/object/project/_section.scss
+++ b/scss/object/project/_section.scss
@@ -403,6 +403,8 @@
   grid-template-columns: 1fr 1fr;
   gap: $spacing-xl;
   align-items: center;
+  width: 100%;
+  max-width: 100%;
 
   @media (max-width: 1024px) {
     grid-template-columns: 1fr;
@@ -424,7 +426,7 @@
   }
 
   &__img {
-    width: 100%;
+    max-width: 100%;
     height: 488px;
     border-radius: $border-radius-md;
     overflow: hidden;
