--- a/scss/style.css
+++ b/scss/style.css
@@ -112,9 +112,14 @@ ul, ol {
   margin: 0 auto;
   padding: 0 16px;
 }
+@media (min-width: 769px) {
+  .l-container, .l-footer__container, .l-section__container, .l-header__container {
+    max-width: 768px;
+  }
+}
 @media (min-width: 1025px) {
   .l-container, .l-footer__container, .l-section__container, .l-header__container {
-    max-width: 1024px;
+    max-width: 1200px;
   }
 }
 @media (min-width: 1440px) {
@@ -1166,6 +1171,8 @@ ul, ol {
   grid-template-columns: 1fr 1fr;
   gap: 32px;
   align-items: center;
+  width: 100%;
+  max-width: 100%;
 }
 @media (max-width: 1024px) {
   .c-about {
@@ -1186,7 +1193,7 @@ ul, ol {
   margin: 0;
 }
 .c-about__img {
-  width: 100%;
+  max-width: 100%;
   height: 488px;
   border-radius: 24px;
   overflow: hidden;
